# personal-team

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Personal-Agentic-Team-PRD-v1.2.md  bot.py  pyproject.toml  requirements.txt  scheduler.py
agents/: claude_client.py  context_manager.py  db.py  drive_client.py  logger.py  router.py
agents/developer/: agent.py  system-prompt.md
agents/integrations/: github.py  linear.py
agents/manager/: agent.py  system-prompt.md
agents/pa/: agent.py  system-prompt.md
deploy/: bot.service  scheduler.service  setup.sh
docs/superpowers/plans/: 2026-03-17-shared-infra-and-pa-agent.md  2026-03-19-pr1-review-fixes.md
docs/superpowers/specs/: 2026-03-17-shared-infra-and-pa-agent-design.md
tests/: conftest.py  test_claude_client.py  test_context_manager.py  test_db.py  test_logger.py  test_pa_signals.py  test_router.py
